<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/notify"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/when"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

    </LinearLayout>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/action_Option"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:hint="@string/points"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/diffPoint"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/against"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/countryOption"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/timeOption"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/save_setting"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:id="@+id/saveSettings"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/clear_setting"
            android:id="@+id/cancelSettings"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>